# LLMServerQtRemoteObjects

./: .gitmodules  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  InferenceEngine.cpp  InferenceEngine.h  QtRoRemoteGenerator.cpp  QtRoRemoteGenerator.h  QtWSRemoteGenerator.cpp  QtWSRemoteGenerator.h  inferenceengine.cpp  llamaresponsegenerator.cpp  llamaresponsegenerator.h  main.cpp  qtroremotegenerator.cpp  qtroremotegenerator.h
QtRemoteObjectsFiles/: LlamaResponseGenerator.rep
cmake/: download_llama_model.cmake  llama_setup.cmake
